@@ -4,11 +4,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.webstore.dto.request.CurrencyRequestDto;
 import com.webstore.dto.response.CurrencyResponseDto;
 import com.webstore.service.CurrencyService;
+import jakarta.validation.Valid;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentMatchers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -16,18 +15,20 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
-//import static org.mockito.ArgumentMatchers.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @ExtendWith(MockitoExtension.class)
-class CurrencyControllerTest {
-
-    private static final String BASE_URL = "/api/currencies";
+public class CurrencyControllerTest {
 
     @Mock
     private CurrencyService currencyService;
@@ -45,22 +46,26 @@ class CurrencyControllerTest {
         mockMvc = MockMvcBuilders.standaloneSetup(currencyController).build();
         objectMapper = new ObjectMapper();
 
-        requestDto = new CurrencyRequestDto("USD", "US Dollar", "$");
+        // Initialize test data
+        requestDto = new CurrencyRequestDto();
+        requestDto.setCurrencyCode("USD");
+        requestDto.setCurrencyName("US Dollar");
+        requestDto.setCurrencySymbol("$");
 
         responseDto = new CurrencyResponseDto();
         responseDto.setCurrencyId(1);
         responseDto.setCurrencyCode("USD");
         responseDto.setCurrencyName("US Dollar");
         responseDto.setCurrencySymbol("$");
+        // You don't need to set the timestamps for testing unless specifically testing that functionality
     }
 
     @Test
-    @DisplayName("Should return list of currencies")
     void testGetAllCurrencies() throws Exception {
-        List<CurrencyResponseDto> currencies = List.of(responseDto);
+        List<CurrencyResponseDto> currencies = Arrays.asList(responseDto);
         when(currencyService.getAllCurrencies(0, 5)).thenReturn(currencies);
 
-        mockMvc.perform(get(BASE_URL)
+        mockMvc.perform(get("/api/currencies")
                         .param("page", "0")
                         .param("size", "5"))
                 .andExpect(status().isOk())
@@ -74,11 +79,10 @@ class CurrencyControllerTest {
     }
 
     @Test
-    @DisplayName("Should return currency by ID")
     void testGetCurrencyById() throws Exception {
         when(currencyService.getCurrencyById(1)).thenReturn(responseDto);
 
-        mockMvc.perform(get(BASE_URL + "/1"))
+        mockMvc.perform(get("/api/currencies/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.currencyId", is(1)))
                 .andExpect(jsonPath("$.currencyCode", is("USD")))
@@ -89,11 +93,10 @@ class CurrencyControllerTest {
     }
 
     @Test
-    @DisplayName("Should create a new currency")
     void testCreateCurrency() throws Exception {
-        when(currencyService.createCurrency(ArgumentMatchers.any(CurrencyRequestDto.class))).thenReturn(responseDto);
+        when(currencyService.createCurrency(any(CurrencyRequestDto.class))).thenReturn(responseDto);
 
-        mockMvc.perform(post(BASE_URL)
+        mockMvc.perform(post("/api/currencies")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
                 .andExpect(status().isCreated())
@@ -102,15 +105,14 @@ class CurrencyControllerTest {
                 .andExpect(jsonPath("$.currencyName", is("US Dollar")))
                 .andExpect(jsonPath("$.currencySymbol", is("$")));
 
-        verify(currencyService, times(1)).createCurrency(ArgumentMatchers.any(CurrencyRequestDto.class));
+        verify(currencyService, times(1)).createCurrency(any(CurrencyRequestDto.class));
     }
 
     @Test
-    @DisplayName("Should update currency by ID")
     void testUpdateCurrency() throws Exception {
-        when(currencyService.updateCurrency(eq(1), ArgumentMatchers.any(CurrencyRequestDto.class))).thenReturn(responseDto);
+        when(currencyService.updateCurrency(eq(1), any(CurrencyRequestDto.class))).thenReturn(responseDto);
 
-        mockMvc.perform(put(BASE_URL + "/1")
+        mockMvc.perform(put("/api/currencies/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
                 .andExpect(status().isOk())
@@ -119,21 +121,16 @@ class CurrencyControllerTest {
                 .andExpect(jsonPath("$.currencyName", is("US Dollar")))
                 .andExpect(jsonPath("$.currencySymbol", is("$")));
 
-        verify(currencyService, times(1)).updateCurrency(eq(1), ArgumentMatchers.any(CurrencyRequestDto.class));
+        verify(currencyService, times(1)).updateCurrency(eq(1), any(CurrencyRequestDto.class));
     }
 
     @Test
-    @DisplayName("Should delete currency by ID")
     void testDeleteCurrency() throws Exception {
-        when(currencyService.deleteCurrency(1)).thenReturn("Currency deleted successfully");
+        doNothing().when(currencyService).deleteCurrency(1);
 
-        mockMvc.perform(delete(BASE_URL + "/1"))
-                .andExpect(status().isOk())
-                .andExpect(content().string("Currency deleted successfully"));
+        mockMvc.perform(delete("/api/currencies/1"))
+                .andExpect(status().isNoContent());
 
         verify(currencyService, times(1)).deleteCurrency(1);
     }
-
-
-    // Optional: Add test cases for error scenarios (400, 404, etc.)
 }
