@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.webstore.dto.request.UserRequestDto;
 import com.webstore.dto.response.UserResponseDto;
 import com.webstore.service.UserService;
+import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -16,15 +17,17 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @ExtendWith(MockitoExtension.class)
 public class UserControllerTest {
@@ -45,6 +48,7 @@ public class UserControllerTest {
         mockMvc = MockMvcBuilders.standaloneSetup(userController).build();
         objectMapper = new ObjectMapper();
 
+        // Initialize test data
         requestDto = new UserRequestDto();
         requestDto.setUsername("testuser");
         requestDto.setEmail("test@example.com");
@@ -63,21 +67,19 @@ public class UserControllerTest {
 
     @Test
     void testGetAllUsers() throws Exception {
-        when(userService.getAllUsers()).thenReturn(List.of(responseDto));
+        List<UserResponseDto> users = Arrays.asList(responseDto);
+        when(userService.getAllUsers()).thenReturn(users);
 
         mockMvc.perform(get("/api/users"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].userId", is(1)));
-    }
+                .andExpect(jsonPath("$[0].userId", is(1)))
+                .andExpect(jsonPath("$[0].username", is("testuser")))
+                .andExpect(jsonPath("$[0].email", is("test@example.com")))
+                .andExpect(jsonPath("$[0].fullName", is("Test User")))
+                .andExpect(jsonPath("$[0].role", is("USER")));
 
-    @Test
-    void testGetAllUsers_WhenEmpty() throws Exception {
-        when(userService.getAllUsers()).thenReturn(Collections.emptyList());
-
-        mockMvc.perform(get("/api/users"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(0)));
+        verify(userService, times(1)).getAllUsers();
     }
 
     @Test
@@ -86,87 +88,117 @@ public class UserControllerTest {
 
         mockMvc.perform(get("/api/users/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.userId", is(1)));
+                .andExpect(jsonPath("$.userId", is(1)))
+                .andExpect(jsonPath("$.username", is("testuser")))
+                .andExpect(jsonPath("$.email", is("test@example.com")))
+                .andExpect(jsonPath("$.fullName", is("Test User")))
+                .andExpect(jsonPath("$.role", is("USER")));
+
+        verify(userService, times(1)).getUserById(1);
     }
 
     @Test
-    void testGetUserById_NotFound() throws Exception {
-        when(userService.getUserById(99))
-                .thenThrow(new ResponseStatusException(org.springframework.http.HttpStatus.NOT_FOUND, "User not found with ID: 99"));
+    void testGetUserByIdNotFound() throws Exception {
+        when(userService.getUserById(99)).thenThrow(new EntityNotFoundException("User not found"));
 
         mockMvc.perform(get("/api/users/99"))
                 .andExpect(status().isNotFound());
+
+        verify(userService, times(1)).getUserById(99);
     }
 
     @Test
-    void testCreateUser_Success() throws Exception {
-        when(userService.createUser(any())).thenReturn(responseDto);
+    void testCreateUser() throws Exception {
+        when(userService.createUser(any(UserRequestDto.class))).thenReturn(responseDto);
 
         mockMvc.perform(post("/api/users")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.userId", is(1)));
+                .andExpect(jsonPath("$.userId", is(1)))
+                .andExpect(jsonPath("$.username", is("testuser")))
+                .andExpect(jsonPath("$.email", is("test@example.com")))
+                .andExpect(jsonPath("$.fullName", is("Test User")))
+                .andExpect(jsonPath("$.role", is("USER")));
+
+        verify(userService, times(1)).createUser(any(UserRequestDto.class));
     }
 
     @Test
-    void testCreateUser_UsernameExists() throws Exception {
-        when(userService.createUser(any()))
-                .thenThrow(new ResponseStatusException(org.springframework.http.HttpStatus.BAD_REQUEST, "Username already exists"));
+    void testCreateUserWithValidationFailure() throws Exception {
+        when(userService.createUser(any(UserRequestDto.class)))
+                .thenThrow(new IllegalArgumentException("Invalid user data"));
 
         mockMvc.perform(post("/api/users")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$", is("Invalid user data")));
+
+        verify(userService, times(1)).createUser(any(UserRequestDto.class));
     }
 
     @Test
-    void testUpdateUser_Success() throws Exception {
-        when(userService.updateUser(eq(1), any())).thenReturn(responseDto);
+    void testUpdateUser() throws Exception {
+        when(userService.updateUser(eq(1), any(UserRequestDto.class))).thenReturn(responseDto);
 
         mockMvc.perform(put("/api/users/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.userId", is(1)));
+                .andExpect(jsonPath("$.userId", is(1)))
+                .andExpect(jsonPath("$.username", is("testuser")))
+                .andExpect(jsonPath("$.email", is("test@example.com")))
+                .andExpect(jsonPath("$.fullName", is("Test User")))
+                .andExpect(jsonPath("$.role", is("USER")));
+
+        verify(userService, times(1)).updateUser(eq(1), any(UserRequestDto.class));
     }
 
     @Test
-    void testUpdateUser_NotFound() throws Exception {
-        when(userService.updateUser(eq(99), any()))
-                .thenThrow(new ResponseStatusException(org.springframework.http.HttpStatus.NOT_FOUND, "User not found with ID: 99"));
+    void testUpdateUserNotFound() throws Exception {
+        when(userService.updateUser(eq(99), any(UserRequestDto.class)))
+                .thenThrow(new EntityNotFoundException("User not found"));
 
         mockMvc.perform(put("/api/users/99")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
                 .andExpect(status().isNotFound());
+
+        verify(userService, times(1)).updateUser(eq(99), any(UserRequestDto.class));
     }
 
     @Test
-    void testUpdateUser_EmailConflict() throws Exception {
-        when(userService.updateUser(eq(1), any()))
-                .thenThrow(new ResponseStatusException(org.springframework.http.HttpStatus.BAD_REQUEST, "Email already exists"));
+    void testUpdateUserValidationFailure() throws Exception {
+        when(userService.updateUser(eq(1), any(UserRequestDto.class)))
+                .thenThrow(new IllegalArgumentException("Invalid user data"));
 
         mockMvc.perform(put("/api/users/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(requestDto)))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$", is("Invalid user data")));
+
+        verify(userService, times(1)).updateUser(eq(1), any(UserRequestDto.class));
     }
 
     @Test
-    void testDeleteUser_Success() throws Exception {
+    void testDeleteUser() throws Exception {
         doNothing().when(userService).deleteUser(1);
 
         mockMvc.perform(delete("/api/users/1"))
                 .andExpect(status().isNoContent());
+
+        verify(userService, times(1)).deleteUser(1);
     }
 
     @Test
-    void testDeleteUser_NotFound() throws Exception {
-        doThrow(new ResponseStatusException(org.springframework.http.HttpStatus.NOT_FOUND, "User not found with ID: 99"))
-                .when(userService).deleteUser(99);
+    void testDeleteUserNotFound() throws Exception {
+        doThrow(new EntityNotFoundException("User not found")).when(userService).deleteUser(99);
 
         mockMvc.perform(delete("/api/users/99"))
                 .andExpect(status().isNotFound());
+
+        verify(userService, times(1)).deleteUser(99);
     }
 }
