@@ -20,17 +20,22 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class CurrencyServiceImplementationTest {
 
-    @Mock private CurrencyRepository currencyRepository;
-    @InjectMocks private CurrencyServiceImplementation currencyService;
+    @Mock
+    private CurrencyRepository currencyRepository;
+
+    @InjectMocks
+    private CurrencyServiceImplementation currencyService;
 
     private Currency currency;
     private CurrencyRequestDto requestDto;
@@ -38,6 +43,7 @@ public class CurrencyServiceImplementationTest {
 
     @BeforeEach
     void setUp() {
+        // Set up test currency
         currency = new Currency();
         currency.setCurrencyId(1);
         currency.setCurrencyCode("USD");
@@ -48,6 +54,7 @@ public class CurrencyServiceImplementationTest {
         currency.setCreatedAt(LocalDateTime.now());
         currency.setUpdatedAt(LocalDateTime.now());
 
+        // Set up request DTO
         requestDto = new CurrencyRequestDto();
         requestDto.setCurrencyCode("USD");
         requestDto.setCurrencyName("US Dollar");
@@ -56,80 +63,104 @@ public class CurrencyServiceImplementationTest {
 
     @Test
     void getAllCurrencies_ShouldReturnListOfCurrencies() {
-        Page<Currency> currencyPage = new PageImpl<>(List.of(currency));
+        // Arrange
+        List<Currency> currencies = Arrays.asList(currency);
+        Page<Currency> currencyPage = new PageImpl<>(currencies);
+
         when(currencyRepository.findAll(any(Pageable.class))).thenReturn(currencyPage);
 
+        // Act
         List<CurrencyResponseDto> result = currencyService.getAllCurrencies(0, 10);
 
+        // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("USD", result.get(0).getCurrencyCode());
+        assertEquals(currency.getCurrencyId(), result.get(0).getCurrencyId());
+        assertEquals(currency.getCurrencyCode(), result.get(0).getCurrencyCode());
+        assertEquals(currency.getCurrencyName(), result.get(0).getCurrencyName());
+        assertEquals(currency.getCurrencySymbol(), result.get(0).getCurrencySymbol());
 
         verify(currencyRepository).findAll(PageRequest.of(0, 10));
     }
 
     @Test
-    void getCurrencyById_WhenExists_ShouldReturnCurrency() {
+    void getCurrencyById_WhenCurrencyExists_ShouldReturnCurrency() {
+        // Arrange
         when(currencyRepository.findById(1)).thenReturn(Optional.of(currency));
 
+        // Act
         CurrencyResponseDto result = currencyService.getCurrencyById(1);
 
+        // Assert
         assertNotNull(result);
-        assertEquals(1, result.getCurrencyId());
-        assertEquals("USD", result.getCurrencyCode());
+        assertEquals(currency.getCurrencyId(), result.getCurrencyId());
+        assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
 
         verify(currencyRepository).findById(1);
     }
 
     @Test
-    void getCurrencyById_WhenNotExists_ShouldThrowException() {
+    void getCurrencyById_WhenCurrencyDoesNotExist_ShouldThrowException() {
+        // Arrange
         when(currencyRepository.findById(99)).thenReturn(Optional.empty());
 
+        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.getCurrencyById(99));
         verify(currencyRepository).findById(99);
     }
 
     @Test
-    void createCurrency_WhenNotExists_ShouldCreateCurrency() {
+    void createCurrency_WhenCurrencyDoesNotExist_ShouldCreateCurrency() {
+        // Arrange
         when(currencyRepository.existsByCurrencyCode("USD")).thenReturn(false);
         when(currencyRepository.save(any(Currency.class))).thenReturn(currency);
 
         try (MockedStatic<AuthUtils> authUtils = mockStatic(AuthUtils.class)) {
             authUtils.when(AuthUtils::getCurrentUsername).thenReturn(TEST_USER);
 
+            // Act
             CurrencyResponseDto result = currencyService.createCurrency(requestDto);
 
+            // Assert
             assertNotNull(result);
-            assertEquals("USD", result.getCurrencyCode());
+            assertEquals(currency.getCurrencyId(), result.getCurrencyId());
+            assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
+
             verify(currencyRepository).existsByCurrencyCode("USD");
             verify(currencyRepository).save(any(Currency.class));
         }
     }
 
     @Test
-    void createCurrency_WhenAlreadyExists_ShouldThrowException() {
+    void createCurrency_WhenCurrencyExists_ShouldThrowException() {
+        // Arrange
         when(currencyRepository.existsByCurrencyCode("USD")).thenReturn(true);
 
+        // Act & Assert
         assertThrows(EntityExistsException.class, () -> currencyService.createCurrency(requestDto));
-
         verify(currencyRepository).existsByCurrencyCode("USD");
         verify(currencyRepository, never()).save(any(Currency.class));
     }
 
     @Test
-    void updateCurrency_WhenExists_ShouldUpdateCurrency() {
+    void updateCurrency_WhenCurrencyExists_ShouldUpdateCurrency() {
+        // Arrange
         when(currencyRepository.findById(1)).thenReturn(Optional.of(currency));
         when(currencyRepository.save(any(Currency.class))).thenReturn(currency);
 
-        requestDto.setCurrencyName("Updated Dollar");
+        // Modify the request DTO to simulate an update
+        requestDto.setCurrencyName("Updated US Dollar");
 
         try (MockedStatic<AuthUtils> authUtils = mockStatic(AuthUtils.class)) {
             authUtils.when(AuthUtils::getCurrentUsername).thenReturn(TEST_USER);
 
+            // Act
             CurrencyResponseDto result = currencyService.updateCurrency(1, requestDto);
 
-            assertEquals("USD", result.getCurrencyCode());
-            assertEquals("Updated Dollar", result.getCurrencyName());
+            // Assert
+            assertNotNull(result);
+            assertEquals(currency.getCurrencyId(), result.getCurrencyId());
+            assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
 
             verify(currencyRepository).findById(1);
             verify(currencyRepository).save(any(Currency.class));
@@ -137,69 +168,86 @@ public class CurrencyServiceImplementationTest {
     }
 
     @Test
-    void updateCurrency_WhenCurrencyNotFound_ShouldThrowException() {
+    void updateCurrency_WhenCurrencyDoesNotExist_ShouldThrowException() {
+        // Arrange
         when(currencyRepository.findById(99)).thenReturn(Optional.empty());
 
+        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.updateCurrency(99, requestDto));
-
         verify(currencyRepository).findById(99);
         verify(currencyRepository, never()).save(any(Currency.class));
     }
 
     @Test
-    void updateCurrency_WhenNewCodeExists_ShouldThrowException() {
+    void updateCurrency_WhenNewCodeAlreadyExists_ShouldThrowException() {
+        // Arrange
         Currency existingCurrency = new Currency();
         existingCurrency.setCurrencyId(1);
         existingCurrency.setCurrencyCode("USD");
 
-        CurrencyRequestDto newCodeDto = new CurrencyRequestDto("EUR", "Euro", "€");
+        // New request with different code
+        CurrencyRequestDto newCodeRequest = new CurrencyRequestDto();
+        newCodeRequest.setCurrencyCode("EUR");
+        newCodeRequest.setCurrencyName("Euro");
+        newCodeRequest.setCurrencySymbol("€");
 
         when(currencyRepository.findById(1)).thenReturn(Optional.of(existingCurrency));
         when(currencyRepository.existsByCurrencyCode("EUR")).thenReturn(true);
 
-        assertThrows(EntityExistsException.class, () -> currencyService.updateCurrency(1, newCodeDto));
-
+        // Act & Assert
+        assertThrows(EntityExistsException.class, () -> currencyService.updateCurrency(1, newCodeRequest));
+        verify(currencyRepository).findById(1);
         verify(currencyRepository).existsByCurrencyCode("EUR");
         verify(currencyRepository, never()).save(any(Currency.class));
     }
 
     @Test
-    void deleteCurrency_WhenExists_ShouldDelete() {
+    void deleteCurrency_WhenCurrencyExists_ShouldDeleteCurrency() {
+        // Arrange
         when(currencyRepository.existsById(1)).thenReturn(true);
         doNothing().when(currencyRepository).deleteById(1);
 
+        // Act
         currencyService.deleteCurrency(1);
 
+        // Assert
         verify(currencyRepository).existsById(1);
         verify(currencyRepository).deleteById(1);
     }
 
     @Test
-    void deleteCurrency_WhenNotExists_ShouldThrowException() {
+    void deleteCurrency_WhenCurrencyDoesNotExist_ShouldThrowException() {
+        // Arrange
         when(currencyRepository.existsById(99)).thenReturn(false);
 
+        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.deleteCurrency(99));
-
         verify(currencyRepository).existsById(99);
         verify(currencyRepository, never()).deleteById(99);
     }
 
     @Test
-    void getCurrencyByCode_WhenExists_ShouldReturnCurrency() {
+    void getCurrencyByCode_WhenCurrencyExists_ShouldReturnCurrency() {
+        // Arrange
         when(currencyRepository.findByCurrencyCode("USD")).thenReturn(Optional.of(currency));
 
+        // Act
         CurrencyResponseDto result = currencyService.getCurrencyByCode("USD");
 
+        // Assert
         assertNotNull(result);
-        assertEquals("USD", result.getCurrencyCode());
+        assertEquals(currency.getCurrencyId(), result.getCurrencyId());
+        assertEquals(currency.getCurrencyCode(), result.getCurrencyCode());
 
         verify(currencyRepository).findByCurrencyCode("USD");
     }
 
     @Test
-    void getCurrencyByCode_WhenNotExists_ShouldThrowException() {
+    void getCurrencyByCode_WhenCurrencyDoesNotExist_ShouldThrowException() {
+        // Arrange
         when(currencyRepository.findByCurrencyCode("XXX")).thenReturn(Optional.empty());
 
+        // Act & Assert
         assertThrows(EntityNotFoundException.class, () -> currencyService.getCurrencyByCode("XXX"));
         verify(currencyRepository).findByCurrencyCode("XXX");
     }
